Sat Mar  1 00:10:38 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* debug.scm: *Warning* This feature is a bit premature.  I add
 	it anyway because 1. it is very useful, and, 2. you can start
	making it less premature by complaining to me and by modifying
	the source! :-)
	(trace): Given one or more procedure objects, trace each one.
  	Given no arguments, show all traced procedures.
	(untrace): Given one or more procedure objects, untrace each one.
  	Given no arguments, untrace all traced procedures.  The tracing in
 	Guile have an advantage to most other systems: We don't create new
 	procedure objects, but mark the procedure objects themselves.
  	This means that also anonymous and internal procedures can be
 	traced.

	* boot-9.scm (error-catching-loop): Added handling of apply-frame
	and exit-frame exceptions.
	
*	* boot-9.scm (assert-repl-prompt, the-prompt-string): Removed.
	(set-repl-prompt!): Setter for repl prompt.
	(scm-style-repl): If prompt is #f, don't prompt; if prompt is a
 	string, display it; if prompt is a thunk, call it and display its
 	result; otherwise display "> ".
  	(Change suggested by Roland Orre <orre@nada.kth.se>.)

	* r4rs.scm (%load-verbosely): Reverted change to
 	`module-defined?', since the module system isn't bootstrapped when
 	we load r4rs.scm.  This is just a temporary fix to make the
	repository version runnable.

Thu Feb 27 23:25:47 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Removed the enabling of debug evaluator and
 	recording of source code positions.  This was placed there for our
 	convenience, but it has already sneaked into the distribution
 	once... so we'd better add this in our local copies instead when
 	we need it.  (These options are normally enabled at the end of
	boot-9.scm when loading the debug module.)

Thu Feb 27 16:04:45 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (module-defined?): New function.
	(macroexpand-1, macroexpand): Use local-ref instead of defined?